k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: waddleperf
  labels:
    app.kubernetes.io/part-of: waddleperf
